--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "mocha": "^8.4.0",
         "typescript": "^4.2.3",
         "yargs": "^16.2.0",
-        "yargs-parser": "^20.2.4"
+        "yargs-parser": "^20.2.4",
+        "ansi-regex": ">=5.0.1"
     }
 }
